// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render properly 1`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #f7f7f7;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-4 {
  padding-left: 12px;
}

<label
  className="emotion-5"
>
  <div
    className="emotion-3"
  >
    <input
      className="emotion-0"
      defaultChecked={false}
      onClick={[Function]}
      type="checkbox"
    />
    <div
      className="emotion-2"
    >
      <svg
        className="emotion-1"
        data-file-name="checkmark.svg"
        width={14}
      />
    </div>
  </div>
  <span
    className="emotion-4"
  >
    Checkbox
  </span>
</label>
`;

exports[`<Checkbox /> should render properly 2`] = `
.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-2 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  padding-left: 12px;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: #82be3c;
  border: 2px solid #82be3c;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-1 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
}

<label
  className="emotion-5"
>
  <div
    className="emotion-3"
  >
    <input
      className="emotion-0"
      defaultChecked={true}
      onClick={[Function]}
      type="checkbox"
    />
    <div
      className="emotion-2"
    >
      <svg
        className="emotion-1"
        data-file-name="checkmark.svg"
        width={14}
      />
    </div>
  </div>
  <span
    className="emotion-4"
  >
    Checkbox
  </span>
</label>
`;
